fix(core/table) - Adjust the Table Styling
Resolves #1468 - Adjusts the styling for tables inside the editor

--- a/src/sass/backend/editor-style/_editor-style.scss
+++ b/src/sass/backend/editor-style/_editor-style.scss
@@ -11,6 +11,7 @@
 @import "core-paragraph";
 @import "core-blockquote";
 @import "core-list";
+@import "core-table";
 
 // Screenreader Classes
 @import "../../elements/accessibility";
