--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -2458,11 +2458,38 @@ p.has-drop-cap:not(:focus):first-letter {
 /* _wp-block-table 
 /* Created on : 16.05.2024, 09:23:37
 /*----------------------------------------------------------------------------*/
+figure.wp-block-table {
+  border-bottom: none;
+}
 figure.wp-block-table:has(.wp-element-caption) table {
   margin-bottom: 0.2rem;
 }
 figure.wp-block-table:has(.wp-element-caption) .wp-element-caption {
   margin-bottom: 1rem;
+}
+figure.wp-block-table.is-style-regular {
+  border-top: none;
+  border-bottom: none;
+}
+figure.wp-block-table.is-style-regular th {
+  background: transparent;
+  border-top: none;
+  border-bottom: none;
+}
+figure.wp-block-table.is-style-regular tr {
+  border-left: none;
+  border-right: none;
+}
+figure.wp-block-table.is-style-regular tr:nth-child(odd) td {
+  background: transparent;
+}
+figure.wp-block-table.is-style-stripes {
+  border-bottom: none;
+}
+figure.wp-block-table tr,
+figure.wp-block-table th,
+figure.wp-block-table td {
+  border-color: var(--color-StandardHellgrau, rgb(233, 237, 242));
 }
 
 .wp-block-table.is-style-stripes tbody tr:nth-child(2n+1) {
