--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.5.17-104
+Version: 2.5.17-119
 Requires at least: 6.4
 Tested up to: 6.5
 Requires PHP: 8.2
@@ -14019,11 +14019,38 @@ p.has-drop-cap:not(:focus):first-letter {
 /* _wp-block-table 
 /* Created on : 16.05.2024, 09:23:37
 /*----------------------------------------------------------------------------*/
+figure.wp-block-table {
+  border-bottom: none;
+}
 figure.wp-block-table:has(.wp-element-caption) table {
   margin-bottom: 0.2rem;
 }
 figure.wp-block-table:has(.wp-element-caption) .wp-element-caption {
   margin-bottom: 1rem;
+}
+figure.wp-block-table.is-style-regular {
+  border-top: none;
+  border-bottom: none;
+}
+figure.wp-block-table.is-style-regular th {
+  background: transparent;
+  border-top: none;
+  border-bottom: none;
+}
+figure.wp-block-table.is-style-regular tr {
+  border-left: none;
+  border-right: none;
+}
+figure.wp-block-table.is-style-regular tr:nth-child(odd) td {
+  background: transparent;
+}
+figure.wp-block-table.is-style-stripes {
+  border-bottom: none;
+}
+figure.wp-block-table tr,
+figure.wp-block-table th,
+figure.wp-block-table td {
+  border-color: var(--color-StandardHellgrau, rgb(233, 237, 242));
 }
 
 .wp-block-table.is-style-stripes tbody tr:nth-child(2n+1) {
