fix(core/verse) - Adjust the Verse Styling
Resolves #1543

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.5.17-119
+Version: 2.5.17-126
 Requires at least: 6.4
 Tested up to: 6.5
 Requires PHP: 8.2
@@ -1899,13 +1899,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
-h1.wp-block-heading,
-h2.wp-block-heading,
-h3.wp-block-heading,
-h4.wp-block-heading,
-h5.wp-block-heading,
-h6.wp-block-heading {
+h6 {
   margin: 1.5rem 0 1rem 0;
   font-family: inherit;
   color: var(--color-content-headlines);
@@ -1916,13 +1910,7 @@ h2 em,
 h3 em,
 h4 em,
 h5 em,
-h6 em,
-h1.wp-block-heading em,
-h2.wp-block-heading em,
-h3.wp-block-heading em,
-h4.wp-block-heading em,
-h5.wp-block-heading em,
-h6.wp-block-heading em {
+h6 em {
   font-style: normal;
 }
 h1.widget-title,
@@ -1930,13 +1918,7 @@ h2.widget-title,
 h3.widget-title,
 h4.widget-title,
 h5.widget-title,
-h6.widget-title,
-h1.wp-block-heading.widget-title,
-h2.wp-block-heading.widget-title,
-h3.wp-block-heading.widget-title,
-h4.wp-block-heading.widget-title,
-h5.wp-block-heading.widget-title,
-h6.wp-block-heading.widget-title {
+h6.widget-title {
   margin-top: 0;
 }
 
@@ -1966,11 +1948,7 @@ h2.wp-block-heading {
 h3,
 h4,
 h5,
-h6,
-h3.wp-block-heading,
-h4.wp-block-heading,
-h5.wp-block-heading,
-h6.wp-block-heading {
+h6 {
   -webkit-hyphens: auto;
           hyphens: auto;
 }
@@ -2025,132 +2003,89 @@ h1.wp-block-heading.mobiletitle {
   }
 }
 
-h2,
-h2.wp-block-heading {
+h2 {
   font-size: 1.5rem;
 }
-.sidebar-outline h2, .widget h2,
-.sidebar-outline h2.wp-block-heading,
-.widget h2.wp-block-heading {
+.sidebar-outline h2, .widget h2 {
   margin-bottom: 11px;
 }
-.search-sidebar h2,
-.search-sidebar h2.wp-block-heading {
+.search-sidebar h2 {
   margin-top: 8px;
 }
-h2.small, h2.subtitle,
-h2.wp-block-heading.small,
-h2.wp-block-heading.subtitle {
+h2.small, h2.subtitle {
   font-size: 1.375rem;
 }
-.search h2,
-.search h2.wp-block-heading {
+.search h2 {
   margin-top: 4px;
 }
-h2.widget-title, .sidebar-inline h2, .search-sidebar h2, .sidebar-outline h2, .widget h2,
-h2.wp-block-heading.widget-title,
-.sidebar-inline h2.wp-block-heading,
-.search-sidebar h2.wp-block-heading,
-.sidebar-outline h2.wp-block-heading,
-.widget h2.wp-block-heading {
+h2.widget-title, .sidebar-inline h2, .search-sidebar h2, .sidebar-outline h2, .widget h2 {
   font-size: 1.313rem;
 }
-table h2,
-table h2.wp-block-heading {
+table h2 {
   font-size: 1.375rem;
 }
-.content-inline h2:first-child,
-.content-inline h2.wp-block-heading:first-child {
+.content-inline h2:first-child {
   margin-top: 0;
 }
 
-h3,
-h3.wp-block-heading {
+h3 {
   margin: 0;
   padding: 11px 0;
   font-size: 1.313rem;
 }
-h3.abstract,
-h3.wp-block-heading.abstract {
+h3.abstract {
   padding: 0 0 22px 0;
 }
-.subpages-menu h3,
-.subpages-menu h3.wp-block-heading {
+.subpages-menu h3 {
   font-weight: normal;
 }
-#off-canvas h3,
-#off-canvas h3.wp-block-heading {
+#off-canvas h3 {
   font-size: 1.188rem;
   border-bottom: 1px solid var(--color-StandardHellgrau);
   margin: 20px 0 0 0;
   padding: 0 10px;
 }
-.sidebar-inline h3, .search-sidebar h3, .sidebar-outline h3, .widget h3,
-.sidebar-inline h3.wp-block-heading,
-.search-sidebar h3.wp-block-heading,
-.sidebar-outline h3.wp-block-heading,
-.widget h3.wp-block-heading {
+.sidebar-inline h3, .search-sidebar h3, .sidebar-outline h3, .widget h3 {
   font-size: 1.188rem;
 }
-table h3,
-table h3.wp-block-heading {
+table h3 {
   font-size: 1.188rem;
 }
 
-h4,
-h4.wp-block-heading {
+h4 {
   margin: 0;
   padding: 11px 0 11px 0;
   font-size: 1.188rem;
 }
-.person h4, .span3 h4,
-.person h4.wp-block-heading,
-.span3 h4.wp-block-heading {
+.person h4, .span3 h4 {
   font-size: 1.063rem;
 }
-.sidebar-inline h4, .search-sidebar h4, .sidebar-outline h4, .widget h4,
-.sidebar-inline h4.wp-block-heading,
-.search-sidebar h4.wp-block-heading,
-.sidebar-outline h4.wp-block-heading,
-.widget h4.wp-block-heading {
+.sidebar-inline h4, .search-sidebar h4, .sidebar-outline h4, .widget h4 {
   font-size: 1.063rem;
 }
-table h4,
-table h4.wp-block-heading {
+table h4 {
   font-size: 1.063rem;
 }
 
-h5,
-h5.wp-block-heading {
+h5 {
   margin: 0;
   padding: 11px 0 11px 0;
   font-size: 1.125rem;
 }
-.sidebar-inline h5, .search-sidebar h5, .sidebar-outline h5, .widget h5,
-.sidebar-inline h5.wp-block-heading,
-.search-sidebar h5.wp-block-heading,
-.sidebar-outline h5.wp-block-heading,
-.widget h5.wp-block-heading {
+.sidebar-inline h5, .search-sidebar h5, .sidebar-outline h5, .widget h5 {
   font-size: 1.063rem;
 }
-table h5,
-table h5.wp-block-heading {
+table h5 {
   font-size: 1rem;
 }
 
-h6,
-h6.wp-block-heading {
+h6 {
   font-size: 1.063rem;
 }
-.sidebar-inline h6, .search-sidebar h6, .sidebar-outline h6, .widget h6,
-.sidebar-inline h6.wp-block-heading,
-.search-sidebar h6.wp-block-heading,
-.sidebar-outline h6.wp-block-heading,
-.widget h6.wp-block-heading {
+.sidebar-inline h6, .search-sidebar h6, .sidebar-outline h6, .widget h6 {
   font-size: 1rem;
 }
-table h6,
-table h6.wp-block-heading {
+table h6 {
   font-size: 0.938rem;
 }
 
@@ -3950,8 +3885,7 @@ figcaption {
 .widget_search .search-text label,
 .searchform-content .search-text label,
 .meta-search .searchform label,
-#meta h3,
-#meta h3.wp-block-heading {
+#meta h3 {
   position: absolute;
   width: 1px;
   height: 1px;
