--- a/src/sass/backend/editor-style/_editor-style.scss
+++ b/src/sass/backend/editor-style/_editor-style.scss
@@ -12,7 +12,8 @@
 @import "core-blockquote";
 @import "core-list";
 @import "core-table";
+@import "core-verse";
+@import "core-heading";
 
 // Screenreader Classes
 @import "../../elements/accessibility";
-@import "../../elements/headlines";
