--- a/src/sass/elements/_headlines.scss
+++ b/src/sass/elements/_headlines.scss
@@ -7,13 +7,8 @@ h2,
 h3,
 h4,
 h5,
-h6,
-h1.wp-block-heading,
-h2.wp-block-heading,
-h3.wp-block-heading,
-h4.wp-block-heading,
-h5.wp-block-heading,
-h6.wp-block-heading {
+h6 
+{
 	margin: 1.5rem 0 1rem 0;
 	font-family: inherit;
 	color: var(--color-content-headlines);
@@ -54,11 +49,8 @@ h2.wp-block-heading {
 h3,
 h4,
 h5,
-h6,
-h3.wp-block-heading,
-h4.wp-block-heading,
-h5.wp-block-heading,
-h6.wp-block-heading {
+h6 
+{
 	@include hyphens(auto);
 }
 
@@ -100,8 +92,7 @@ h1.wp-block-heading {
 	}
 }
 
-h2,
-h2.wp-block-heading {
+h2 {
 	@include px2rem($font-size-h2, $font-size-base, $font-size-h2 * 1.3);
 
 	.sidebar-outline &,
@@ -142,8 +133,7 @@ h2.wp-block-heading {
 	}
 }
 
-h3,
-h3.wp-block-heading {
+h3 {
 	margin: 0;
 	padding: 11px 0;
 	@include px2rem($font-size-h3);
@@ -182,8 +172,7 @@ h3.wp-block-heading {
 
 }
 
-h4,
-h4.wp-block-heading {
+h4 {
 	margin: 0;
 	padding: 11px 0 11px 0;
 	@include px2rem($font-size-h4);
@@ -206,8 +195,7 @@ h4.wp-block-heading {
 
 }
 
-h5,
-h5.wp-block-heading {
+h5 {
 	margin: 0;
 	padding: 11px 0 11px 0;
 	@include px2rem($font-size-h5);
@@ -224,8 +212,7 @@ h5.wp-block-heading {
 	}
 }
 
-h6,
-h6.wp-block-heading {
+h6 {
 	@include px2rem($font-size-h6);
 
 	.sidebar-inline &,
