--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -2562,3 +2562,8 @@ figure.wp-block-pullquote > blockquote {
   border-left: none;
   border-top: 10px solid var(--color-primary-ci-hell);
 }
+
+main figure.wp-block-image, main figure.wp-block-image img {
+  max-width: 100%;
+  width: 100%;
+}
