--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.5.17-126
+Version: 2.5.17-132
 Requires at least: 6.4
 Tested up to: 6.5
 Requires PHP: 8.2
@@ -14056,4 +14056,9 @@ figure.wp-block-table td {
 figure.wp-block-pullquote > blockquote {
   border-left: none;
   border-top: 10px solid var(--color-primary-ci-hell);
+}
+
+main figure.wp-block-image, main figure.wp-block-image img {
+  max-width: 100%;
+  width: 100%;
 }
