fix(core/cover) - Adjust styling for front & Backend
Add Styling for the cover-Block

--- a/src/sass/fau-theme-admin.scss
+++ b/src/sass/fau-theme-admin.scss
@@ -51,8 +51,8 @@ $font-path-roboto:	'../fonts/roboto/';
 @import "backend/backend";
 
 
-// Block Library Overwrites
-@import "block-library/block-library"
+// // Block Library Overwrites
+// @import "block-library/block-library"
 
 
 
