--- a/src/sass/block-library/_block-library.scss
+++ b/src/sass/block-library/_block-library.scss
@@ -20,3 +20,9 @@
 
 //Cover Block
 @import "wp-block-cover";
+
+//Verse Block
+@import "wp-block-verse";
+
+//Columns and column
+@import "wp-block-columns";
