--- a/src/sass/block-library/_wp-block-cover.scss
+++ b/src/sass/block-library/_wp-block-cover.scss
@@ -1,26 +1,26 @@
 div.wp-block-cover{
 
-    &.is-position-top-left,
-    &.is-position-middle-left,
-    &.is-position-bottom-left{
-        p{
-            text-align: left;
-        }
-    }
-    &.is-position-top-center,
-    &.is-position-middle-center,
-    &.is-position-bottom-center{
-        p{
-            text-align: center;
-        }
-    }
-    &.is-position-top-right,
-    &.is-position-middle-right,
-    &.is-position-bottom-right{
-        p{
-            text-align: right;
-        }
-    }
+    // &.is-position-top-left,
+    // &.is-position-middle-left,
+    // &.is-position-bottom-left{
+    //     p{
+    //         text-align: left;
+    //     }
+    // }
+    // &.is-position-top-center,
+    // &.is-position-middle-center,
+    // &.is-position-bottom-center{
+    //     p{
+    //         text-align: center;
+    //     }
+    // }
+    // &.is-position-top-right,
+    // &.is-position-middle-right,
+    // &.is-position-bottom-right{
+    //     p{
+    //         text-align: right;
+    //     }
+    // }
     h1, h2, h3, h4 ,h5 ,h6{
         margin-bottom: 0;
     }
