--- a/src/sass/backend/editor-style/_core-blockquote.scss
+++ b/src/sass/backend/editor-style/_core-blockquote.scss
@@ -14,3 +14,8 @@ blockquote.wp-block-quote, figure.wp-block-pullquote blockquote {
         text-align: inherit;
     }
 }
+
+figure.wp-block-pullquote blockquote{
+    margin-left: 0;
+    margin-right: 0;
+}
