--- a/src/sass/backend/editor-style/_core-block-columns.scss
+++ b/src/sass/backend/editor-style/_core-block-columns.scss
@@ -1,3 +1,3 @@
-.block-columns{
-    padding: var(--wp--preset--spacing--40, 1rem);
-}
+// .block-columns{
+//     padding: var(--wp--preset--spacing--40, 1rem);
+// }
