--- a/src/sass/backend/editor-style/_editor-style.scss
+++ b/src/sass/backend/editor-style/_editor-style.scss
@@ -14,6 +14,7 @@
 @import "core-table";
 @import "core-verse";
 @import "core-heading";
+@import "core-image";
 
 // Screenreader Classes
 @import "../../elements/accessibility";
