--- a/src/sass/block-library/_wp-block-cover.scss
+++ b/src/sass/block-library/_wp-block-cover.scss
@@ -1,49 +1,41 @@
-div.wp-block-cover{
+div.wp-block-cover {
 
-    // &.is-position-top-left,
-    // &.is-position-middle-left,
-    // &.is-position-bottom-left{
-    //     p{
-    //         text-align: left;
-    //     }
-    // }
-    // &.is-position-top-center,
-    // &.is-position-middle-center,
-    // &.is-position-bottom-center{
-    //     p{
-    //         text-align: center;
-    //     }
-    // }
-    // &.is-position-top-right,
-    // &.is-position-middle-right,
-    // &.is-position-bottom-right{
-    //     p{
-    //         text-align: right;
-    //     }
-    // }
-    h1, h2, h3, h4 ,h5 ,h6{
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
         margin-bottom: 0;
     }
-    p, h1, h2, h3, h4 ,h5 ,h6{
+
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
         background-color: var(--color-branding-primary-kontrast, #fff);
         color: var(--color-branding-primary, #04316a);
         padding: 0.5rem 1rem;
         width: fit-content;
         max-width: 65ch;
 
-        &:first-child{
+        &:first-child {
             background-color: var(--color-branding-primary, #04316a);
-            color: var(--color-branding-primary-kontrast, #fff);            
+            color: var(--color-branding-primary-kontrast, #fff);
         }
 
-        &.has-text-align-center{
+        &.has-text-align-center {
             margin: 0 auto;
         }
-        &.has-text-align-left{
+
+        &.has-text-align-left {
             margin-left: 0 !important;
         }
 
-        &.has-text-align-right{
+        &.has-text-align-right {
             margin-right: 0 !important;
             margin-left: auto;
         }
