--- a/src/sass/backend/editor-style/_core-blockquote.scss
+++ b/src/sass/backend/editor-style/_core-blockquote.scss
@@ -2,6 +2,7 @@
 /* _wp-block-blockquote 
 /* Created on : 03.05.2024, 15:12:21
 /*----------------------------------------------------------------------------*/
+@import "../../mixins/mixin-blockquotes";
 
 blockquote.wp-block-quote,
 figure.wp-block-pullquote blockquote {
