--- a/src/sass/backend/editor-style/_core-paragraph.scss
+++ b/src/sass/backend/editor-style/_core-paragraph.scss
@@ -2,7 +2,7 @@
 /* _wp-block-paragraph 
 /* Created on : 03.05.2024, 15:12:21
 /*----------------------------------------------------------------------------*/
-
+@import "../../mixins/mixin-paragraphs";
 p.wp-block-paragraph {
     // imported from _paragraphs.scss
     @include paragraphs();
