--- a/src/sass/elements/_paragraphs.scss
+++ b/src/sass/elements/_paragraphs.scss
@@ -1,6 +1,7 @@
 /*-----------------------------------------------------------------------------------*/
 /* Paragraphs
 /*-----------------------------------------------------------------------------------*/
+@import "../mixins/mixin-paragraphs";
 p {
 	@include paragraphs();
 }
