--- a/src/sass/elements/_tables.scss
+++ b/src/sass/elements/_tables.scss
@@ -16,22 +16,21 @@ table th[class*="span"] {
 	float: none;
 	margin-left: 0;
 }
-	
+
 .table-wrapper {
 	position: relative;
 	overflow: hidden;
 	margin: 0;
 	border-right: 1px solid var(--color-ContentBorders);
-	
-	
+
 	@media (min-width: $screen-sm) {
-	    border-right: none;
-	}
-	.scrollable {
-	    overflow-x: auto;
-	    overflow-y: hidden;
+		border-right: none;
 	}
 
+	.scrollable {
+		overflow-x: auto;
+		overflow-y: hidden;
+	}
 }
 
 table {
@@ -40,9 +39,11 @@ table {
 
 .sidebar-inline,
 .sidebar-single {
-    table {
-	th, td {
-		padding: 0.3rem;
+	table {
+
+		th,
+		td {
+			padding: 0.3rem;
+		}
 	}
-    }
 }
