--- a/src/sass/mixins/_mixin-blockquotes.scss
+++ b/src/sass/mixins/_mixin-blockquotes.scss
@@ -18,30 +18,37 @@
         }
     }
 
- //   #tinymce &,
-//    #content & {
-   //     max-width: calc(100% - 2.5rem);
-        margin: 1rem;
-        padding: 2rem 1.5rem;
-        min-height: 3rem;
-        border-left: 10px solid var(--color-primary-ci-hell);
-	border-radius: var(--border-radius);
-        background: var(--color-ContentRegions);
-        display: inline-block;
-        overflow: hidden;
+    //   #tinymce &,
+    //    #content & {
+    //     max-width: calc(100% - 2.5rem);
+    margin: 1rem;
+    padding: 2rem 1.5rem;
+    min-height: 3rem;
+    border-left: 10px solid var(--color-primary-ci-hell);
+    border-radius: var(--border-radius);
+    background: var(--color-ContentRegions);
+    display: inline-block;
+    overflow: hidden;
 
-        @media (min-width: $screen-sm) {
-            margin: 0.6rem 2rem;
-     //       padding: 31px 40px 20px 40px;
-   //         max-width: calc(100% - 4rem);
-        }
+    @media (min-width: $screen-sm) {
+        margin: 0.6rem 2rem;
+        //       padding: 31px 40px 20px 40px;
+        //         max-width: calc(100% - 4rem);
+    }
 
-        p, h1, h2, h3, h4, h5, h6 {
-            color: var(--color-Text);
-        }
- //   }
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: var(--color-Text);
+    }
 
-    
+    //   }
+
+
 
     small,
     cite {
@@ -69,20 +76,22 @@
         border-right: none;
         padding-right: var(--width-gutter);
         padding-left: var(--width-gutter-half);
-	float: right;
-	
-	p,
-	small {
-		text-align: right;
-	}
-	small:before {
-	    content: '';
-	}
-	small:after {
-	    content: '\00A0 \2014';
-	}
+        float: right;
+
+        p,
+        small {
+            text-align: right;
+        }
+
+        small:before {
+            content: '';
+        }
+
+        small:after {
+            content: '\00A0 \2014';
+        }
     }
-    
+
     .sidebar-inline &,
     #tinymce &.noquote,
     #content &.noquote {
@@ -99,9 +108,10 @@
     }
 
     .sidebar-inline & {
-	margin: 0.6rem;
+        margin: 0.6rem;
         padding: 0.5rem;
         @include px2rem($font-size-sidebar);
+
         p {
             @include px2rem($font-size-sidebar);
         }
