--- a/src/sass/elements/_tables.scss
+++ b/src/sass/elements/_tables.scss
@@ -8,30 +8,16 @@ table {
 	background-color: transparent;
 	border-collapse: collapse;
 	border-spacing: 0;
-}
-
-table td[class*="span"],
-table th[class*="span"] {
+	
+     td[class*="span"],
+     th[class*="span"] {
 	display: table-cell;
 	float: none;
 	margin-left: 0;
+    }
 }
 
-.table-wrapper {
-	position: relative;
-	overflow: hidden;
-	margin: 0;
-	border-right: 1px solid var(--color-ContentBorders);
 
-	@media (min-width: $screen-sm) {
-		border-right: none;
-	}
-
-	.scrollable {
-		overflow-x: auto;
-		overflow-y: hidden;
-	}
-}
 
 table {
 	@include table();
